OAKHILL/src/objects/Performance__c.object
<CustomObject>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <label>Fund Name</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Performances</relationshipLabel>
        <relationshipName>Performances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Return__c</fullName>
        <inlineHelpText>Fund Performance - Gross return</inlineHelpText>
        <label>Gross Return</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Return__c</fullName>
        <inlineHelpText>Fund Performance - Net Return</inlineHelpText>
        <label>Net Return</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>